namespace Simulator.Model;

public class ClientPassenger : ClientTransport
{
    
}