namespace ScenarioGenerator.Model;

public class PlaneRescue : PlaneSupport
{
	public PlaneRescue(string name, int x, int y, int speed, int maintenanceTime) : base(name, x, y, speed,
		maintenanceTime)
	{
		
	}
	
	public PlaneRescue() {}
}